--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,8 @@ steps:
 
 - script: dotnet build $(solution) --configuration $(buildConfiguration)
   displayName: 'Build Solution'
+
+- script: dotnet test $(solution) --configuration $(buildConfiguration) --no-build --collect:"XPlat-Code-Coverage"
+  displayName: 'Build Solution'
+
+ 
